Quick Fix
Removed little white space below the header and Added spacing top/bottom the menu links (in mobile view) for easy clicking

--- a/css/app.css
+++ b/css/app.css
@@ -43,12 +43,15 @@ header {
     align-items: center;
     background: #ff6600;
     padding: 0.25rem;
-    margin-bottom: 0.5rem;
 }
 
 @media (max-width:768px) {
     header {
         flex-direction: column;
+    }
+
+    .menu-links {
+        margin: 1rem 0;
     }
 }
 
